Fix panel column layouts
It required a flex grow to make sure it takes up the full space of
it's container. Otherwise, things like the stat are too small and
don't render correctly

--- a/src/css/components/panel.scss
+++ b/src/css/components/panel.scss
@@ -135,11 +135,14 @@ h4 + .panel {
 }
 
 .panel-block {
-  $vertical-padding: $panel-padding / 2;
-  padding: $vertical-padding 0;
+  padding-bottom: calc(1.5rem / 2);
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: calc(1.5rem / 2);
 }
 
 .panel-column {
+  flex-grow: 1;
   font-size: $sans-s4;
   margin-right: 1rem;
 
